Devops/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
          - name: http-port
            containerPort: 80
          - name: https-port
            containerPort: 443
