Devops/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    ingress.kubernetes.io/static-ip: "k8s2-fr-ap5de71h-default-api-ingress-s0ubiqdx"
    networking.gke.io/managed-certificates: "api-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: api-svc
      port:
        number: 80
